fix some kontakt section mobile styles

--- a/src/styles/components/_kontakt.scss
+++ b/src/styles/components/_kontakt.scss
@@ -27,16 +27,35 @@
   position: relative;
   flex-direction: column;
   left: -20%;
-  
-  max-width: 60vw;
+  font-size: 14px;
+  max-width: 71vw;
   top: 0vh;
   @media (min-width: $desktop-breakpoint) {
     left: -15%;
     top: auto;
     align-self: center;
+    max-width: 47vw;
   }
   @media (max-width: 970px) and (min-width: 415px) {
     max-width: 40vw;
+  }
+}
+
+.kontakt__text>ul{
+  color:$grey;
+  
+  @media (min-width: $desktop-breakpoint) {
+    font-size: 21px;
+    line-height: 2rem;
+  }
+    
+}
+
+.kontakt__text>ul>li{
+  padding-bottom: 0.2rem;
+  @media (min-width: $desktop-breakpoint){
+    padding-bottom:inherit;
+    
   }
 }
 
