--- a/src/styles/components/_uslugi.scss
+++ b/src/styles/components/_uslugi.scss
@@ -110,6 +110,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    position:relative;
     height: 100%;
     width: 20%;
     margin-right: 0px;
